Changelog
=========

10.1.dev0 - (unreleased)
------------------------

10.0 - (2015-09-10)
-------------------
* Feature: Added utility to update PDF metadata. Moved from eea.reports
  [voineali refs #28522]
* Feature: Added utility to extract metadata from PDF. Moved from eea.reports
  [voineali refs #28522]
* Feature: Added utility to extract cover image from PDF. Moved from eea.reports
  [voineali refs #28522]
* Change: Drop pdftk dependency and use pure Python PyPDF2 package
  [voineali refs #28522]

9.6 - (2015-08-18)
------------------
* Change: added pdf_custom_fixes.css loaded by pdf.header and pdf.footer
  in case there is a need for quickfixes
  [ichimdav refs #27537]
* Bug fix: fixed pdf.footer title and page number when used on indicators
  [ichimdav refs #27537]

9.5 - (2015-07-28)
------------------
* Change: modified pdf.toc.pt styles in order to avoid page break when
  outputting the list items with the toc entries
  [ichimdav refs #27475]
* Bug fix: Update modification time for exported PDF/ePub files in order for
  the cleanup cron-job to know not to delete PDFs/ePubs files that
  were recently requested.
  [voineali refs #27513]

9.4 - (2015-05-26)
------------------
* Bug fix: Keep Job within wk.py for backward compatibility
  [voineali refs #25755]

9.3 - (2015-05-05)
------------------
* Change: changed footer and header templates in order to preserve template
  logic when using static headers and footer
  [ichimdav refs #23904]

9.2 - (2015-04-02)
------------------
* Feature: added the possibility to limit the header tags that appear within
  the table of contents
  [ichimdav refs #24351]

9.1 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins builds install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins builds install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

9.0 - (2015-02-25)
------------------